--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
    <head>
       <meta charset="utf8">
       <title>連絡先</title>
+      <link rel="stylesheet" href="/style.css">
    </head>
    <body>
       <h1>これはerbで書きました。</h1>
