--- a/views/index.erb
+++ b/views/index.erb
@@ -7,5 +7,9 @@
    <body>
       <h1>これはerbで書きました。</h1>
       <p>今の時刻は: <%= @now %></p>
+      
+      <footer>
+         <a href="about.html">このサービスについて</a>
+      </footer>
    </body>
 </html>
