--- a/views/index.erb
+++ b/views/index.erb
@@ -21,6 +21,7 @@
                <tr>
                   <th>ID</th>
                   <th>名前</th>
+                  <th>email</th>
                </tr>
             </thead>
             <tbody>
@@ -28,6 +29,7 @@
                   <tr>
                      <td><%= contact.id %></td>
                      <td><%= contact.name %></td>
+                     <td><%= contact.email %></td>
                   </tr>
                <% end %>
             </tbody>
