--- a/views/contact_form.erb
+++ b/views/contact_form.erb
@@ -18,6 +18,7 @@
       
       <form action="contacts" method="post">
          <input type="text" name="name">
+         <input type="text" name="email">
          <input type="submit">
       </form>
       <div>
