udemy 26 contact_formを編集

--- a/views/contact_form.erb
+++ b/views/contact_form.erb
@@ -17,8 +17,14 @@
       <% end %>
       
       <form action="contacts" method="post">
-         <input type="text" name="name">
-         <input type="text" name="email">
+         <div>
+            <label for="contact_name">名前</label>
+            <input type="text" name="name" id="contact_name" value="<%=@contact.name%>">
+         </div>
+         <div>
+            <label for="contact_email">Email</label>
+            <input type="text" name="email" id="contact_email" value="<%=@contact.email%>">
+         </div>
          <input type="submit">
       </form>
       <div>
